--- a/CbO.ipynb
+++ b/CbO.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CbO"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -66,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -79,13 +86,17 @@
       "\t\t({1},{'c', 'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in {2, 3, 4, 5}\n",
+      "\tf = 2\n",
       "\tZ = {1, 2}\n",
+      "\tf_der =  {'c', 'b', 'a'}\n",
       "\tY = {'c', 'b'}\n",
       "\tX = {1, 2, 3}\n",
       "Process({1, 2}, 2, {1, 2, 3}, {'c', 'b'})\n",
       "\t{3} = { }\n",
       "\tfor f in {3, 4, 5}\n",
+      "\tf = 3\n",
       "\tZ = {1, 2, 3}\n",
+      "\tf_der =  {'c', 'b'}\n",
       "\tY = {'c', 'b'}\n",
       "\tX = {1, 2, 3}\n",
       "Process({1, 2, 3}, 3, {1, 2, 3}, {'c', 'b'})\n",
@@ -95,13 +106,17 @@
       "\t\t({1},{'c', 'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in {4, 5}\n",
+      "\tf = 4\n",
       "\tZ = {1, 2, 3, 4}\n",
+      "\tf_der =  {'a', 'd'}\n",
       "\tY = set()\n",
       "\tX = {1, 2, 3, 4, 5}\n",
       "Process({1, 2, 3, 4}, 4, {1, 2, 3, 4, 5}, set())\n",
       "\t{5} = { }\n",
       "\tfor f in {5}\n",
+      "\tf = 5\n",
       "\tZ = {1, 2, 3, 4, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = set()\n",
       "\tX = {1, 2, 3, 4, 5}\n",
       "Process({1, 2, 3, 4, 5}, 5, {1, 2, 3, 4, 5}, set())\n",
@@ -112,7 +127,9 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 5\n",
       "\tZ = {1, 2, 3, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = {'b'}\n",
       "\tX = {1, 2, 3, 5}\n",
       "Process({1, 2, 3, 5}, 5, {1, 2, 3, 5}, {'b'})\n",
@@ -124,13 +141,17 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 4\n",
       "\tZ = {1, 2, 3, 4}\n",
+      "\tf_der =  {'a', 'd'}\n",
       "\tY = set()\n",
       "\tX = {1, 2, 3, 4, 5}\n",
       "Process({1, 2, 3, 4}, 4, {1, 2, 3, 4, 5}, set())\n",
       "\t{5} = { }\n",
       "\tfor f in {5}\n",
+      "\tf = 5\n",
       "\tZ = {1, 2, 3, 4, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = set()\n",
       "\tX = {1, 2, 3, 4, 5}\n",
       "Process({1, 2, 3, 4, 5}, 5, {1, 2, 3, 4, 5}, set())\n",
@@ -142,7 +163,9 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 5\n",
       "\tZ = {1, 2, 3, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = {'b'}\n",
       "\tX = {1, 2, 3, 5}\n",
       "Process({1, 2, 3, 5}, 5, {1, 2, 3, 5}, {'b'})\n",
@@ -154,7 +177,9 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 3\n",
       "\tZ = {1, 3}\n",
+      "\tf_der =  {'c', 'b'}\n",
       "\tY = {'c', 'b'}\n",
       "\tX = {1, 2, 3}\n",
       "Process({1, 3}, 3, {1, 2, 3}, {'c', 'b'})\n",
@@ -166,13 +191,17 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in {4, 5}\n",
+      "\tf = 4\n",
       "\tZ = {1, 2, 3, 4}\n",
+      "\tf_der =  {'a', 'd'}\n",
       "\tY = set()\n",
       "\tX = {1, 2, 3, 4, 5}\n",
       "Process({1, 2, 3, 4}, 4, {1, 2, 3, 4, 5}, set())\n",
       "\t{5} = { }\n",
       "\tfor f in {5}\n",
+      "\tf = 5\n",
       "\tZ = {1, 2, 3, 4, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = set()\n",
       "\tX = {1, 2, 3, 4, 5}\n",
       "Process({1, 2, 3, 4, 5}, 5, {1, 2, 3, 4, 5}, set())\n",
@@ -184,7 +213,9 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 5\n",
       "\tZ = {1, 2, 3, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = {'b'}\n",
       "\tX = {1, 2, 3, 5}\n",
       "Process({1, 2, 3, 5}, 5, {1, 2, 3, 5}, {'b'})\n",
@@ -196,13 +227,17 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 4\n",
       "\tZ = {1, 4}\n",
+      "\tf_der =  {'a', 'd'}\n",
       "\tY = {'d'}\n",
       "\tX = {1, 4, 5}\n",
       "Process({1, 4}, 4, {1, 4, 5}, {'d'})\n",
       "\t{5} = { }\n",
       "\tfor f in {5}\n",
+      "\tf = 5\n",
       "\tZ = {1, 4, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = {'d'}\n",
       "\tX = {1, 4, 5}\n",
       "Process({1, 4, 5}, 5, {1, 4, 5}, {'d'})\n",
@@ -215,7 +250,9 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 5\n",
       "\tZ = {1, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = {'b', 'd'}\n",
       "\tX = {1, 5}\n",
       "Process({1, 5}, 5, {1, 5}, {'b', 'd'})\n",
@@ -241,7 +278,9 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in {3, 4, 5}\n",
+      "\tf = 3\n",
       "\tZ = {2, 3}\n",
+      "\tf_der =  {'c', 'b'}\n",
       "\tY = {'c', 'b'}\n",
       "\tX = {1, 2, 3}\n",
       "Process({2, 3}, 3, {1, 2, 3}, {'c', 'b'})\n",
@@ -256,13 +295,17 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in {4, 5}\n",
+      "\tf = 4\n",
       "\tZ = {1, 2, 3, 4}\n",
+      "\tf_der =  {'a', 'd'}\n",
       "\tY = set()\n",
       "\tX = {1, 2, 3, 4, 5}\n",
       "Process({1, 2, 3, 4}, 4, {1, 2, 3, 4, 5}, set())\n",
       "\t{5} = { }\n",
       "\tfor f in {5}\n",
+      "\tf = 5\n",
       "\tZ = {1, 2, 3, 4, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = set()\n",
       "\tX = {1, 2, 3, 4, 5}\n",
       "Process({1, 2, 3, 4, 5}, 5, {1, 2, 3, 4, 5}, set())\n",
@@ -277,7 +320,9 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 5\n",
       "\tZ = {1, 2, 3, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = {'b'}\n",
       "\tX = {1, 2, 3, 5}\n",
       "Process({1, 2, 3, 5}, 5, {1, 2, 3, 5}, {'b'})\n",
@@ -292,13 +337,17 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 4\n",
       "\tZ = {2, 4}\n",
+      "\tf_der =  {'a', 'd'}\n",
       "\tY = {'a'}\n",
       "\tX = {2, 4, 5}\n",
       "Process({2, 4}, 4, {2, 4, 5}, {'a'})\n",
       "\t{5} = { }\n",
       "\tfor f in {5}\n",
+      "\tf = 5\n",
       "\tZ = {2, 4, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = {'a'}\n",
       "\tX = {2, 4, 5}\n",
       "Process({2, 4, 5}, 5, {2, 4, 5}, {'a'})\n",
@@ -314,7 +363,9 @@
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 5\n",
       "\tZ = {2, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = {'b', 'a'}\n",
       "\tX = {2, 5}\n",
       "Process({2, 5}, 5, {2, 5}, {'b', 'a'})\n",
@@ -345,13 +396,17 @@
       "\t\t({1, 4, 5},{'d'}),\n",
       "\t}\n",
       "\tfor f in {4, 5}\n",
+      "\tf = 4\n",
       "\tZ = {1, 2, 3, 4}\n",
+      "\tf_der =  {'a', 'd'}\n",
       "\tY = set()\n",
       "\tX = {1, 2, 3, 4, 5}\n",
       "Process({1, 2, 3, 4}, 4, {1, 2, 3, 4, 5}, set())\n",
       "\t{5} = { }\n",
       "\tfor f in {5}\n",
+      "\tf = 5\n",
       "\tZ = {1, 2, 3, 4, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = set()\n",
       "\tX = {1, 2, 3, 4, 5}\n",
       "Process({1, 2, 3, 4, 5}, 5, {1, 2, 3, 4, 5}, set())\n",
@@ -368,7 +423,9 @@
       "\t\t({1, 4, 5},{'d'}),\n",
       "\t}\n",
       "\tfor f in set()\n",
+      "\tf = 5\n",
       "\tZ = {1, 2, 3, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = {'b'}\n",
       "\tX = {1, 2, 3, 5}\n",
       "Process({1, 2, 3, 5}, 5, {1, 2, 3, 5}, {'b'})\n",
@@ -388,7 +445,9 @@
       "Process({4}, 4, {4, 5}, {'a', 'd'})\n",
       "\t{5} = { }\n",
       "\tfor f in {5}\n",
+      "\tf = 5\n",
       "\tZ = {4, 5}\n",
+      "\tf_der =  {'b', 'd', 'a'}\n",
       "\tY = {'d', 'a'}\n",
       "\tX = {4, 5}\n",
       "Process({4, 5}, 5, {4, 5}, {'d', 'a'})\n",
@@ -435,19 +494,127 @@
     "    \n",
     "    print('\\tfor f in',  {h for h in G.difference(A) if g < h})\n",
     "    for f in {h for h in G.difference(A) if g < h}:\n",
+    "        print('\\tf =', f)\n",
     "        Z = C | {f}\n",
     "        print('\\tZ =', Z)\n",
     "        Y = D & derivative({f}, formal_type='extent')\n",
+    "        print('\\tf_der = ', derivative({f}, formal_type='extent'))\n",
     "        print('\\tY =', Y)\n",
     "        X = derivative(Y, formal_type='intent')\n",
     "        print('\\tX =', X)\n",
     "        process(Z, f, X, Y, L)\n",
+    "\n",
     "L = set()\n",
     "for g in G:\n",
     "    g_ = g\n",
     "    g_der = derivative({g_})\n",
     "    process({g_}, g_, derivative(g_der), g_der, L)    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Equvalence classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import chain, combinations\n",
+    "\n",
+    "def powerset(iterable):\n",
+    "    \"powerset([1,2,3]) --> () (1,) (2,) (3,) (1,2) (1,3) (2,3) (1,2,3)\"\n",
+    "    s = list(iterable)\n",
+    "    return chain.from_iterable(combinations(s, r) for r in range(len(s)+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_eq(eq):\n",
+    "    for e in eq:\n",
+    "        print(set(e), eq[e])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5} [set()]\n",
+      "{2, 4, 5} [{'a'}]\n",
+      "{1, 2, 3} [{'c'}, {'c', 'b'}]\n",
+      "{1, 2, 3, 5} [{'b'}]\n",
+      "{1, 4, 5} [{'d'}]\n",
+      "{2} [{'c', 'a'}, {'c', 'b', 'a'}]\n",
+      "{2, 5} [{'b', 'a'}]\n",
+      "{4, 5} [{'d', 'a'}]\n",
+      "{1} [{'c', 'd'}, {'c', 'b', 'd'}]\n",
+      "{1, 5} [{'b', 'd'}]\n",
+      "set() [{'c', 'd', 'a'}, {'c', 'b', 'd', 'a'}]\n",
+      "{5} [{'b', 'd', 'a'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "power_M = list(set(x) for x in powerset(M))\n",
+    "eq_classes = {}\n",
+    "for s in power_M:\n",
+    "    s_der = frozenset(derivative(s, formal_type='intent'))\n",
+    "    if s_der in eq_classes:\n",
+    "        eq_classes[s_der].append(s)\n",
+    "    else:\n",
+    "        eq_classes[s_der] = [s]\n",
+    "\n",
+    "print_eq(eq_classes)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generator implication cover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'c'} \\rightarrow {'b'}\n",
+      "{'c', 'a'} \\rightarrow {'b'}\n",
+      "{'c', 'd'} \\rightarrow {'b'}\n",
+      "{'c', 'd', 'a'} \\rightarrow {'b'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "nmingen = [{'c'}, {'c', 'a'}, {'c', 'd'}, {'c', 'd', 'a'}]\n",
+    "for f in nmingen:\n",
+    "    print(f, '\\\\rightarrow', derivative(derivative(f)).difference(f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
