--- a/CbO.ipynb
+++ b/CbO.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,37 +73,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process({1}, 1, {1}, {'c', 'b', 'd'})\n",
+      "Process({1}, 1, {1}, {'b', 'c', 'd'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
       "\t}\n",
       "\tfor f in {2, 3, 4, 5}\n",
       "\tf = 2\n",
       "\tZ = {1, 2}\n",
-      "\tf_der =  {'c', 'b', 'a'}\n",
-      "\tY = {'c', 'b'}\n",
+      "\tf_der =  {'b', 'c', 'a'}\n",
+      "\tY = {'b', 'c'}\n",
       "\tX = {1, 2, 3}\n",
-      "Process({1, 2}, 2, {1, 2, 3}, {'c', 'b'})\n",
+      "Process({1, 2}, 2, {1, 2, 3}, {'b', 'c'})\n",
       "\t{3} = { }\n",
       "\tfor f in {3, 4, 5}\n",
       "\tf = 3\n",
       "\tZ = {1, 2, 3}\n",
-      "\tf_der =  {'c', 'b'}\n",
-      "\tY = {'c', 'b'}\n",
+      "\tf_der =  {'b', 'c'}\n",
+      "\tY = {'b', 'c'}\n",
       "\tX = {1, 2, 3}\n",
-      "Process({1, 2, 3}, 3, {1, 2, 3}, {'c', 'b'})\n",
+      "Process({1, 2, 3}, 3, {1, 2, 3}, {'b', 'c'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
       "\t}\n",
       "\tfor f in {4, 5}\n",
       "\tf = 4\n",
@@ -122,8 +122,8 @@
       "Process({1, 2, 3, 4, 5}, 5, {1, 2, 3, 4, 5}, set())\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
@@ -135,10 +135,10 @@
       "Process({1, 2, 3, 5}, 5, {1, 2, 3, 5}, {'b'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
       "\t}\n",
       "\tfor f in set()\n",
       "\tf = 4\n",
@@ -157,9 +157,9 @@
       "Process({1, 2, 3, 4, 5}, 5, {1, 2, 3, 4, 5}, set())\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
       "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
@@ -171,23 +171,23 @@
       "Process({1, 2, 3, 5}, 5, {1, 2, 3, 5}, {'b'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
       "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
       "\tf = 3\n",
       "\tZ = {1, 3}\n",
-      "\tf_der =  {'c', 'b'}\n",
-      "\tY = {'c', 'b'}\n",
+      "\tf_der =  {'b', 'c'}\n",
+      "\tY = {'b', 'c'}\n",
       "\tX = {1, 2, 3}\n",
-      "Process({1, 3}, 3, {1, 2, 3}, {'c', 'b'})\n",
+      "Process({1, 3}, 3, {1, 2, 3}, {'b', 'c'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
       "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in {4, 5}\n",
@@ -207,9 +207,9 @@
       "Process({1, 2, 3, 4, 5}, 5, {1, 2, 3, 4, 5}, set())\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
       "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
@@ -221,9 +221,9 @@
       "Process({1, 2, 3, 5}, 5, {1, 2, 3, 5}, {'b'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
       "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
@@ -243,10 +243,10 @@
       "Process({1, 4, 5}, 5, {1, 4, 5}, {'d'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t}\n",
       "\tfor f in set()\n",
@@ -258,41 +258,41 @@
       "Process({1, 5}, 5, {1, 5}, {'b', 'd'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in set()\n",
-      "Process({2}, 2, {2}, {'c', 'b', 'a'})\n",
+      "Process({2}, 2, {2}, {'b', 'c', 'a'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in {3, 4, 5}\n",
       "\tf = 3\n",
       "\tZ = {2, 3}\n",
-      "\tf_der =  {'c', 'b'}\n",
-      "\tY = {'c', 'b'}\n",
+      "\tf_der =  {'b', 'c'}\n",
+      "\tY = {'b', 'c'}\n",
       "\tX = {1, 2, 3}\n",
-      "Process({2, 3}, 3, {1, 2, 3}, {'c', 'b'})\n",
+      "Process({2, 3}, 3, {1, 2, 3}, {'b', 'c'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in {4, 5}\n",
       "\tf = 4\n",
@@ -311,13 +311,13 @@
       "Process({1, 2, 3, 4, 5}, 5, {1, 2, 3, 4, 5}, set())\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in set()\n",
       "\tf = 5\n",
@@ -328,13 +328,13 @@
       "Process({1, 2, 3, 5}, 5, {1, 2, 3, 5}, {'b'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in set()\n",
       "\tf = 4\n",
@@ -353,14 +353,14 @@
       "Process({2, 4, 5}, 5, {2, 4, 5}, {'a'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
       "\t\t({2, 4, 5},{'a'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in set()\n",
       "\tf = 5\n",
@@ -371,29 +371,29 @@
       "Process({2, 5}, 5, {2, 5}, {'b', 'a'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({2, 5},{'b', 'a'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
-      "\t\t({1, 2, 3, 4, 5},set()),\n",
-      "\t\t({2, 4, 5},{'a'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({2, 5},{'b', 'a'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
+      "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
+      "\t\t({2, 4, 5},{'a'}),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in set()\n",
-      "Process({3}, 3, {1, 2, 3}, {'c', 'b'})\n",
+      "Process({3}, 3, {1, 2, 3}, {'b', 'c'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({2, 5},{'b', 'a'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
-      "\t\t({1, 2, 3, 4, 5},set()),\n",
-      "\t\t({2, 4, 5},{'a'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({2, 5},{'b', 'a'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
+      "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
+      "\t\t({2, 4, 5},{'a'}),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in {4, 5}\n",
       "\tf = 4\n",
@@ -412,15 +412,15 @@
       "Process({1, 2, 3, 4, 5}, 5, {1, 2, 3, 4, 5}, set())\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({2, 5},{'b', 'a'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
-      "\t\t({1, 2, 3, 4, 5},set()),\n",
-      "\t\t({2, 4, 5},{'a'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({2, 5},{'b', 'a'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
+      "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
+      "\t\t({2, 4, 5},{'a'}),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in set()\n",
       "\tf = 5\n",
@@ -431,15 +431,15 @@
       "Process({1, 2, 3, 5}, 5, {1, 2, 3, 5}, {'b'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({2, 5},{'b', 'a'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
-      "\t\t({1, 2, 3, 4, 5},set()),\n",
-      "\t\t({2, 4, 5},{'a'}),\n",
       "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({2, 5},{'b', 'a'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
+      "\t\t({1, 2, 3, 4, 5},set()),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
+      "\t\t({2, 4, 5},{'a'}),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in set()\n",
       "Process({4}, 4, {4, 5}, {'a', 'd'})\n",
@@ -453,32 +453,32 @@
       "Process({4, 5}, 5, {4, 5}, {'d', 'a'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
+      "\t\t({1, 4, 5},{'d'}),\n",
       "\t\t({2, 5},{'b', 'a'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t\t({4, 5},{'d', 'a'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
       "\t\t({2, 4, 5},{'a'}),\n",
-      "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in set()\n",
       "Process({5}, 5, {5}, {'b', 'd', 'a'})\n",
       "\tset() = { }\n",
       "\tL = {\n",
-      "\t\t({1, 5},{'b', 'd'}),\n",
-      "\t\t({1},{'c', 'b', 'd'}),\n",
-      "\t\t({1, 2, 3, 5},{'b'}),\n",
-      "\t\t({2, 5},{'b', 'a'}),\n",
       "\t\t({5},{'b', 'd', 'a'}),\n",
-      "\t\t({2},{'c', 'b', 'a'}),\n",
-      "\t\t({1, 2, 3},{'c', 'b'}),\n",
+      "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({2, 5},{'b', 'a'}),\n",
+      "\t\t({1, 2, 3, 5},{'b'}),\n",
       "\t\t({1, 2, 3, 4, 5},set()),\n",
       "\t\t({4, 5},{'d', 'a'}),\n",
+      "\t\t({1},{'b', 'c', 'd'}),\n",
+      "\t\t({1, 2, 3},{'b', 'c'}),\n",
+      "\t\t({2},{'b', 'c', 'a'}),\n",
       "\t\t({2, 4, 5},{'a'}),\n",
-      "\t\t({1, 4, 5},{'d'}),\n",
+      "\t\t({1, 5},{'b', 'd'}),\n",
       "\t}\n",
       "\tfor f in set()\n"
      ]
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -554,16 +554,16 @@
      "text": [
       "{1, 2, 3, 4, 5} [set()]\n",
       "{2, 4, 5} [{'a'}]\n",
-      "{1, 2, 3} [{'c'}, {'c', 'b'}]\n",
       "{1, 2, 3, 5} [{'b'}]\n",
+      "{1, 2, 3} [{'c'}, {'b', 'c'}]\n",
       "{1, 4, 5} [{'d'}]\n",
-      "{2} [{'c', 'a'}, {'c', 'b', 'a'}]\n",
       "{2, 5} [{'b', 'a'}]\n",
+      "{2} [{'c', 'a'}, {'b', 'c', 'a'}]\n",
       "{4, 5} [{'d', 'a'}]\n",
-      "{1} [{'c', 'd'}, {'c', 'b', 'd'}]\n",
       "{1, 5} [{'b', 'd'}]\n",
-      "set() [{'c', 'd', 'a'}, {'c', 'b', 'd', 'a'}]\n",
-      "{5} [{'b', 'd', 'a'}]\n"
+      "{1} [{'c', 'd'}, {'b', 'c', 'd'}]\n",
+      "{5} [{'b', 'd', 'a'}]\n",
+      "set() [{'c', 'd', 'a'}, {'b', 'd', 'c', 'a'}]\n"
      ]
     }
    ],
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -610,11 +610,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Find Duquenne-Guigues bases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b'} => {'c'}\n",
+      "{'a'} => {'e'}\n",
+      "{'e', 'c'} => {'a', 'b', 'd'}\n",
+      "{'c', 'd'} => {'b'}\n",
+      "{'a', 'e', 'd'} => {'b', 'c'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "G = {12, 15, 23, 24, 25, 34, 35}\n",
+    "M = {'a', 'b', 'c', 'd', 'e'}\n",
+    "M_G = {\n",
+    "    'a': {35},\n",
+    "    'b': {15, 23},\n",
+    "    'c': {15, 23, 24, 34},\n",
+    "    'd': {12, 15, 25},\n",
+    "    'e': {12, 35}\n",
+    "}\n",
+    "G_M = {\n",
+    "    12: {'d', 'e'},\n",
+    "    15: {'b', 'c', 'd'},\n",
+    "    23: {'b', 'c'},\n",
+    "    24: {'c'},\n",
+    "    25: {'d'},\n",
+    "    34: {'c'},\n",
+    "    35: {'a', 'e'},\n",
+    "}\n",
+    "\n",
+    "def is_pseudointent(p):\n",
+    "    if derivative(derivative(p, formal_type='intent')) != p:\n",
+    "        power_p = list(set(x) for x in powerset(p))\n",
+    "        for q in power_p[:-1]:\n",
+    "            der_der_q = derivative(derivative(q, formal_type='intent'))\n",
+    "            \n",
+    "            if len(q) ==0:\n",
+    "                continue\n",
+    "            if is_pseudointent(q) and not (der_der_q.issubset(p) and len(p) != len(der_der_q)):\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "power_M = list(set(x) for x in powerset(M))\n",
+    "im_base_classes = []\n",
+    "for p in power_M:\n",
+    "    if is_pseudointent(p):\n",
+    "        print(p, '=>', derivative(derivative(p, formal_type='intent')).difference(p))"
+   ]
   }
  ],
  "metadata": {
