Finish classification methods

--- a/lazy_classification.ipynb
+++ b/lazy_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_itersect(data_row, classification_row):\n",
+    "def compute_itersect(data_row, classification_row, interval_constructor=None):\n",
     "    \"\"\"\n",
-    "    This func compute intersection between two given rows\n",
+    "    This func compute intersection between two given rows.\n",
+    "\n",
+    "    Arguments:\n",
+    "        data_row (list) -- data row\n",
+    "        classification_row (list) -- row that we try to classify\n",
+    "        interval_constructor (method) -- method for computing interval (default None)\n",
+    "\n",
+    "    Return: \n",
+    "        intersection (np.array) -- array with computed intersaction that \n",
+    "            can be used as pattern for filtering data \n",
     "    \"\"\"\n",
     "    intersection = []\n",
     "\n",
@@ -32,20 +41,29 @@
     "            else:\n",
     "                intersection.append(classification_row[i])\n",
     "        else:\n",
-    "            intersection.append((min(data_row[i], classification_row[i]), max(data_row[i], classification_row[i])))\n",
+    "            if interval_constructor is None:\n",
+    "                intersection.append((min(data_row[i], classification_row[i]), max(data_row[i], classification_row[i])))\n",
+    "            else:\n",
+    "                intersection.append(interval_constructor(data_row[i], classification_row[i]))\n",
     "\n",
     "    return np.array(intersection, dtype=object)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_extent(data, pattern):\n",
     "    \"\"\"\n",
-    "    This func compute extent for pattern and data\n",
+    "    This func compute extent for pattern and data.\n",
+    "    Arguments:\n",
+    "        data (pandas.DataFrame) -- data frame with train data\n",
+    "        pattern (np.array) -- pattern for filtering rows\n",
+    "\n",
+    "    Return: \n",
+    "        extent (list) -- list with tuples, where first value is row index and second value is target value for extent\n",
     "    \"\"\"\n",
     "    extent = []\n",
     "    \n",
@@ -76,21 +94,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def classificator(train, test, verbose=0):\n",
+    "def classificator(train, test, verbose=0, interval_constructor=None):\n",
+    "    \"\"\"\n",
+    "    Lazy FCA classificator.\n",
+    "    Arguments:\n",
+    "        train (pandas.DataFrame) -- data frame with train data\n",
+    "        test (pandas.DataFrame) -- data frame with data fro classification\n",
+    "        verbose (int) -- value for controling logging, if 0 won't log anything otherwise print computation steps\n",
+    "        interval_constructor (method) -- method for computing interval (default None)\n",
+    "    Return: \n",
+    "        answers (list) -- return classification results, if object can't be classified put U (Undefined) in list\n",
+    "    \"\"\"\n",
     "    answers = []\n",
     "    for test_row in test.iloc:\n",
     "        is_classified = False\n",
     "        for train_row in train.iloc:\n",
-    "            pattern = compute_itersect(train_row.to_list(), test_row.to_list())\n",
+    "            pattern = compute_itersect(train_row.to_list(), test_row.to_list(), interval_constructor=interval_constructor)\n",
     "            extent = compute_extent(train, pattern)\n",
     "            if verbose:\n",
     "                print(pattern)\n",
     "                print(extent)\n",
-    "            if all(extent[0][1] == x[1] for x in extent):\n",
+    "            if len(extent) != 0 and all(extent[0][1] == x[1] for x in extent):\n",
     "                answers.append(extent[0][1])\n",
     "                is_classified = True\n",
     "                break\n",
@@ -101,18 +129,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_accourac"
+    "def count_accuracy(predictions, answers):\n",
+    "    \"\"\"Count accuracy for prediction and correct answers\n",
+    "    Arguments:\n",
+    "        predictions (list) -- labels that was predicted\n",
+    "        answers (list) -- write predictions\n",
+    "    Return: \n",
+    "        accuracy (float) -- accuracy for giving data\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if len(answers) != len(predictions):\n",
+    "        raise Exception\n",
+    "    \n",
+    "    count = 0\n",
+    "    for i in range(len(predictions)):\n",
+    "        if answers.iloc[i] == predictions[i]:\n",
+    "            count += 1\n",
+    "    \n",
+    "    return count / len(predictions)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def cross_validation(data, folds = 5, verbose=0):\n",
+    "    \"\"\"\n",
+    "    Cross validation for counting Lazy FCA classifier avarage accuracy.\n",
+    "    Arguments:\n",
+    "        data (pandas.DataFrame) -- data frame with data for counting avarage accuracy\n",
+    "        folds (int) -- number of folds for cross validation\n",
+    "        verbose (int) -- value for controling logging, if 0 won't log anything otherwise print computation steps\n",
+    "    Return: \n",
+    "        avarage accuracy (float) -- return avarage accuracy for all folds\n",
+    "    \"\"\"\n",
+    "    accuracys = np.array([])\n",
+    "    fold_size = int(np.ceil(data.shape[0] / folds))\n",
+    "    for i in range(0, data.shape[0], fold_size):\n",
+    "        train = pd.concat([data.iloc[: i], data.iloc[i + fold_size:]])\n",
+    "        test = data.iloc[i : i + fold_size].drop(columns=[\"Accegrade\"])\n",
+    "        test_y = data.iloc[i : i + fold_size][\"Accegrade\"]\n",
+    "        if verbose:\n",
+    "            print(f\"Fold {i // fold_size + 1}\")\n",
+    "        prediction = classificator(train, test, verbose=verbose)\n",
+    "        accuracy = count_accuracy(prediction, test_y)\n",
+    "        accuracys = np.append(accuracys, accuracy)\n",
+    "        if verbose:\n",
+    "            print(\"Accuracy for fold %d is %.2f \\n\"%(i // fold_size + 1, accuracy))\n",
+    "\n",
+    "    return np.average(accuracys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((17, 8),\n",
+       "    System   mount  price  CON  SnOW  ice dur  dur Accegrade\n",
+       " 0      SK       F    206  1.9   1.4      1.8  2.7         F\n",
+       " 1     SRK  F or R    520  2.1   0.8      3.8  2.3         F\n",
+       " 2      SK       F    160  1.7   1.9      1.6  3.7         F\n",
+       " 3      SK       F    213  1.7   2.0      2.4  3.4         F\n",
+       " 4     SMS  F or R    598  1.6   2.4      2.7  2.8         F\n",
+       " 5      SK       F    109  2.0   1.9      2.4  3.7         F\n",
+       " 6     SRK  F or R    325  2.0   2.1      3.2  2.8         T\n",
+       " 7     SMS  F or R    498  1.5   3.3      3.5  2.0         T\n",
+       " 8     SRK  F or R    396  2.8   2.1      3.1  2.5         T\n",
+       " 9     SRK  F or R    325  2.2   2.2      4.6  3.2         T\n",
+       " 10    SRK  F or R    389  2.0   2.2      3.3  4.3         T\n",
+       " 11    SRK       F    298  2.5   2.3      3.3  2.8         T\n",
+       " 12     SK       F    149  1.9   2.5      4.0  3.8         T\n",
+       " 13    SMS  F or R    684  1.7   3.3      4.4  2.2         T\n",
+       " 14     SK       F     99  2.8   2.2      2.5  4.0         T\n",
+       " 15     SK       F    140  2.6   2.3      3.3  3.4         T\n",
+       " 16     SK       F    215  2.3   3.8      4.8  2.3         T)"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = pd.read_csv(\"data/Wheel_Chains_Dataset.csv\", sep=';')\n",
     "data.shape, data"
@@ -120,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -132,16 +239,17 @@
       "['SK' 'F' (140, 206) (1.9, 2.6) (1.4, 2.3) (1.8, 3.3) (2.7, 3.4)]\n",
       "[(0, 'F')]\n",
       "['SK' 'F' (206, 215) (1.9, 2.3) (1.4, 3.8) (1.8, 4.8) (2.3, 2.7)]\n",
-      "[(0, 'F')]\n"
+      "[(0, 'F')]\n",
+      "['F', 'F', 'F']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['F', 'F', 'F']"
+       "0.0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,12 +258,14 @@
     "train = data.iloc[:-3]\n",
     "test = data.iloc[-3:].drop(columns=[\"Accegrade\"])\n",
     "test_y = data.iloc[-3:][\"Accegrade\"]\n",
-    "classificator(train, test, verbose=1)"
+    "prediction = classificator(train, test, verbose=1)\n",
+    "print(prediction)\n",
+    "count_accuracy(prediction, test_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +292,7 @@
        " 16     SK       F    215  2.3   3.8      4.8  2.3         T)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -206,16 +316,17 @@
       "['SK' 'F' (140, 149) (1.9, 2.6) (2.3, 2.5) (3.3, 4.0) (3.4, 3.8)]\n",
       "[(0, 'T')]\n",
       "['SK' 'F' (149, 215) (1.9, 2.3) (2.5, 3.8) (4.0, 4.8) (2.3, 3.8)]\n",
-      "[(0, 'T')]\n"
+      "[(0, 'T')]\n",
+      "['T', 'T', 'T']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['T', 'T', 'T']"
+       "1.0"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,15 +335,181 @@
     "train = data.iloc[:-3]\n",
     "test = data.iloc[-3:].drop(columns=[\"Accegrade\"])\n",
     "test_y = data.iloc[-3:][\"Accegrade\"]\n",
-    "classificator(train, test, verbose=1)"
+    "prediction = classificator(train, test, verbose=1)\n",
+    "print(prediction)\n",
+    "count_accuracy(prediction, test_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 1\n",
+      "['SK' 'F' (149, 213) (1.7, 1.9) (2.0, 2.5) (2.4, 4.0) (3.4, 3.8)]\n",
+      "[(0, 'F')]\n",
+      "['*' '*' (213, 520) (1.7, 2.1) (0.8, 2.0) (2.4, 3.8) (2.3, 3.4)]\n",
+      "[(0, 'F')]\n",
+      "['*' '*' (213, 389) (1.7, 2.0) (2.0, 2.2) (2.4, 3.3) (3.4, 4.3)]\n",
+      "[(0, 'F'), (7, 'T')]\n",
+      "['*' 'F or R' (389, 598) (1.6, 2.0) (2.2, 2.4) (2.7, 3.3) (2.8, 4.3)]\n",
+      "[(1, 'F'), (7, 'T')]\n",
+      "['*' '*' (109, 389) (2.0, 2.0) (1.9, 2.2) (2.4, 3.3) (3.7, 4.3)]\n",
+      "[(2, 'F'), (7, 'T')]\n",
+      "['SRK' 'F or R' (325, 389) (2.0, 2.0) (2.1, 2.2) (3.2, 3.3) (2.8, 4.3)]\n",
+      "[(3, 'T'), (7, 'T')]\n",
+      "Accuracy for fold 1 is 0.67 \n",
+      "\n",
+      "Fold 2\n",
+      "['SK' 'F' (149, 213) (1.7, 1.9) (2.0, 2.5) (2.4, 4.0) (3.4, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "['*' '*' (149, 598) (1.6, 1.9) (2.4, 2.5) (2.7, 4.0) (2.8, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "['SK' 'F' (109, 149) (1.9, 2.0) (1.9, 2.5) (2.4, 4.0) (3.7, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "Accuracy for fold 2 is 0.00 \n",
+      "\n",
+      "Fold 3\n",
+      "['*' '*' (149, 325) (1.9, 2.0) (2.1, 2.5) (3.2, 4.0) (2.8, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "['*' '*' (149, 498) (1.5, 1.9) (2.5, 3.3) (3.5, 4.0) (2.0, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "['*' '*' (149, 396) (1.9, 2.8) (2.1, 2.5) (3.1, 4.0) (2.5, 3.8)]\n",
+      "[(0, 'T'), (8, 'T')]\n",
+      "Accuracy for fold 3 is 1.00 \n",
+      "\n",
+      "Fold 4\n",
+      "['SK' 'F' (149, 160) (1.7, 1.9) (1.9, 2.5) (1.6, 4.0) (3.7, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "['*' '*' (149, 389) (1.9, 2.0) (2.2, 2.5) (3.3, 4.0) (3.8, 4.3)]\n",
+      "[(0, 'T'), (2, 'T')]\n",
+      "['*' 'F' (149, 298) (1.9, 2.5) (2.3, 2.5) (3.3, 4.0) (2.8, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "Accuracy for fold 4 is 0.67 \n",
+      "\n",
+      "Fold 5\n",
+      "['SK' 'F' (149, 206) (1.9, 1.9) (1.4, 2.5) (1.8, 4.0) (2.7, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "['*' '*' (149, 684) (1.7, 1.9) (2.5, 3.3) (4.0, 4.4) (2.2, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "['SK' 'F' (99, 149) (1.9, 2.8) (2.2, 2.5) (2.5, 4.0) (3.8, 4.0)]\n",
+      "[(0, 'T')]\n",
+      "Accuracy for fold 5 is 0.67 \n",
+      "\n",
+      "Fold 6\n",
+      "['SK' 'F' (140, 149) (1.9, 2.6) (2.3, 2.5) (3.3, 4.0) (3.4, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "['SK' 'F' (149, 215) (1.9, 2.3) (2.5, 3.8) (4.0, 4.8) (2.3, 3.8)]\n",
+      "[(0, 'T')]\n",
+      "Accuracy for fold 6 is 1.00 \n",
+      "\n",
+      "Cross validation accuracy 66.67%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Cross validation accuracy %.2f\"%(cross_validation(data, folds=6, verbose=1) * 100) + '%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def min_inf_interval(a_1, a_2):\n",
+    "    return (min(a_1, a_2), float('inf'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SK' 'F' (99, inf) (1.9, inf) (2.2, inf) (2.5, inf) (3.8, inf)]\n",
+      "[(0, 'T')]\n",
+      "['T']\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = pd.concat([data.iloc[:14], data.iloc[15:]])\n",
+    "test = data.iloc[14:15].drop(columns=[\"Accegrade\"])\n",
+    "test_y = data.iloc[14:15][\"Accegrade\"]\n",
+    "prediction = classificator(train, test, verbose=1, interval_constructor=min_inf_interval)\n",
+    "print(prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_inf_interval(a_1, a_2):\n",
+    "    return (max(a_1, a_2), float('inf'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SK' 'F' (149, inf) (2.8, inf) (2.5, inf) (4.0, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['*' '*' (520, inf) (2.8, inf) (2.2, inf) (3.8, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['*' '*' (389, inf) (2.8, inf) (2.2, inf) (3.3, inf) (4.3, inf)]\n",
+      "[]\n",
+      "['SK' 'F' (213, inf) (2.8, inf) (2.2, inf) (2.5, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['*' '*' (598, inf) (2.8, inf) (2.4, inf) (2.7, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['SK' 'F' (109, inf) (2.8, inf) (2.2, inf) (2.5, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['*' '*' (325, inf) (2.8, inf) (2.2, inf) (3.2, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['*' '*' (498, inf) (2.8, inf) (3.3, inf) (3.5, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['*' '*' (396, inf) (2.8, inf) (2.2, inf) (3.1, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['SK' 'F' (160, inf) (2.8, inf) (2.2, inf) (2.5, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['*' '*' (389, inf) (2.8, inf) (2.2, inf) (3.3, inf) (4.3, inf)]\n",
+      "[]\n",
+      "['*' 'F' (298, inf) (2.8, inf) (2.3, inf) (3.3, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['SK' 'F' (206, inf) (2.8, inf) (2.2, inf) (2.5, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['*' '*' (684, inf) (2.8, inf) (3.3, inf) (4.4, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['SK' 'F' (140, inf) (2.8, inf) (2.3, inf) (3.3, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['SK' 'F' (215, inf) (2.8, inf) (3.8, inf) (4.8, inf) (4.0, inf)]\n",
+      "[]\n",
+      "['U']\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = pd.concat([data.iloc[:14], data.iloc[15:]])\n",
+    "test = data.iloc[14:15].drop(columns=[\"Accegrade\"])\n",
+    "test_y = data.iloc[14:15][\"Accegrade\"]\n",
+    "prediction = classificator(train, test, verbose=1, interval_constructor=max_inf_interval)\n",
+    "print(prediction)"
+   ]
   }
  ],
  "metadata": {
