Add comments and interpritation for results.

--- a/lazy_classification.ipynb
+++ b/lazy_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 1 - 2\n",
+    "For solving task 1 and 2 we will define function for lazy FCA classification. This function will use compute intersect computation function for getting intersect between row in dataset and row we want to classify. And function for computing extent base on intersect computed from previos function. Also we add function for computing intervals as argument with default value for future tasks 4 and 5. We also can set verbose to 1 for logging every step of classifier. Also we define function for computing accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,41 +162,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 137,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def cross_validation(data, folds = 5, verbose=0):\n",
-    "    \"\"\"\n",
-    "    Cross validation for counting Lazy FCA classifier avarage accuracy.\n",
-    "    Arguments:\n",
-    "        data (pandas.DataFrame) -- data frame with data for counting avarage accuracy\n",
-    "        folds (int) -- number of folds for cross validation\n",
-    "        verbose (int) -- value for controling logging, if 0 won't log anything otherwise print computation steps\n",
-    "    Return: \n",
-    "        avarage accuracy (float) -- return avarage accuracy for all folds\n",
-    "    \"\"\"\n",
-    "    accuracys = np.array([])\n",
-    "    fold_size = int(np.ceil(data.shape[0] / folds))\n",
-    "    for i in range(0, data.shape[0], fold_size):\n",
-    "        train = pd.concat([data.iloc[: i], data.iloc[i + fold_size:]])\n",
-    "        test = data.iloc[i : i + fold_size].drop(columns=[\"Accegrade\"])\n",
-    "        test_y = data.iloc[i : i + fold_size][\"Accegrade\"]\n",
-    "        if verbose:\n",
-    "            print(f\"Fold {i // fold_size + 1}\")\n",
-    "        prediction = classificator(train, test, verbose=verbose)\n",
-    "        accuracy = count_accuracy(prediction, test_y)\n",
-    "        accuracys = np.append(accuracys, accuracy)\n",
-    "        if verbose:\n",
-    "            print(\"Accuracy for fold %d is %.2f \\n\"%(i // fold_size + 1, accuracy))\n",
-    "\n",
-    "    return np.average(accuracys)"
+    "# Task 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +197,7 @@
        " 16     SK       F    215  2.3   3.8      4.8  2.3         T)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +231,7 @@
        "0.0"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,8 +246,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comments for results\n",
+    "Here we have very poor accuracy. In my opinion, this is because we have only one object in most of our extents, so we have to change our algorithm a bit, such as taking the average prediction instead of just the first one, or changing the function for calculating the intervals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +289,7 @@
        " 16     SK       F    215  2.3   3.8      4.8  2.3         T)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +323,7 @@
        "1.0"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,8 +338,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comments for results\n",
+    "Here we have too good acuracy to be true. We just lucky becouse changing order of dataset help us with getting right results. For getting correct accuracy we should use cross validation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 3\n",
+    "Here we use cross validation with 6 folds for computing appropriate accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_validation(data, folds=5, verbose=0, interval_constructor=None):\n",
+    "    \"\"\"\n",
+    "    Cross validation for counting Lazy FCA classifier avarage accuracy.\n",
+    "    Arguments:\n",
+    "        data (pandas.DataFrame) -- data frame with data for counting avarage accuracy\n",
+    "        folds (int) -- number of folds for cross validation\n",
+    "        verbose (int) -- value for controling logging, if 0 won't log anything otherwise print computation steps\n",
+    "        interval_constructor (method) -- method for computing interval (default None)\n",
+    "    Return: \n",
+    "        avarage accuracy (float) -- return avarage accuracy for all folds\n",
+    "    \"\"\"\n",
+    "    accuracys = np.array([])\n",
+    "    fold_size = int(np.ceil(data.shape[0] / folds))\n",
+    "    for i in range(0, data.shape[0], fold_size):\n",
+    "        train = pd.concat([data.iloc[: i], data.iloc[i + fold_size:]])\n",
+    "        test = data.iloc[i : i + fold_size].drop(columns=[\"Accegrade\"])\n",
+    "        test_y = data.iloc[i : i + fold_size][\"Accegrade\"]\n",
+    "        if verbose:\n",
+    "            print(f\"Fold {i // fold_size + 1}\")\n",
+    "        prediction = classificator(train, test, verbose=verbose, interval_constructor=interval_constructor)\n",
+    "        accuracy = count_accuracy(prediction, test_y)\n",
+    "        accuracys = np.append(accuracys, accuracy)\n",
+    "        if verbose:\n",
+    "            print(\"Accuracy for fold %d is %.2f \\n\"%(i // fold_size + 1, accuracy))\n",
+    "\n",
+    "    return np.average(accuracys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -416,8 +463,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 4\n",
+    "Here we define new function for computing intervals and try it with object number 15. It looks like better method, but let's try cross validation for appropriate check."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +505,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross validation accuracy 66.67%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Cross validation accuracy %.2f\"%(cross_validation(data, folds=6, verbose=0, interval_constructor=min_inf_interval) * 100) + '%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 5\n",
+    "Another function for tring with object 15. It looks like worth method, but let's try cross validation for appropriate check."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -510,6 +590,37 @@
     "prediction = classificator(train, test, verbose=1, interval_constructor=max_inf_interval)\n",
     "print(prediction)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross validation accuracy 22.22%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Cross validation accuracy %.2f\"%(cross_validation(data, folds=6, verbose=0, interval_constructor=max_inf_interval) * 100) + '%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comments for results\n",
+    "\n",
+    "We have tried two different methods for computing intervals. I think that first method is more appropriate for our dataset, because second one is too strickt and objects usually get undefined tag. Same results show cross validation. Max inf interval get lower accuracy then min inf. However both methods give low accuracy, so actually we should better try other approaches for tunning our model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
