--- a/lazy_classification.ipynb
+++ b/lazy_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        " 3      SK       F    213  1.7   2.0      2.4  3.4         F\n",
        " 4     SMS  F or R    598  1.6   2.4      2.7  2.8         F\n",
        " 5      SK       F    109  2.0   1.9      2.4  3.7         F\n",
-       " 6     SRK  F or R    325  2.0   2.1      3.2  2.8         T\n",
+       " 6     SRK  F or R    325  2.0   2.1      3.2  2.8         F\n",
        " 7     SMS  F or R    498  1.5   3.3      3.5  2.0         T\n",
        " 8     SRK  F or R    396  2.8   2.1      3.1  2.5         T\n",
        " 9     SRK  F or R    325  2.2   2.2      4.6  3.2         T\n",
@@ -197,7 +197,7 @@
        " 16     SK       F    215  2.3   3.8      4.8  2.3         T)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "0.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        " 3      SK       F    213  1.7   2.0      2.4  3.4         F\n",
        " 4     SMS  F or R    598  1.6   2.4      2.7  2.8         F\n",
        " 5      SK       F    109  2.0   1.9      2.4  3.7         F\n",
-       " 6     SRK  F or R    325  2.0   2.1      3.2  2.8         T\n",
+       " 6     SRK  F or R    325  2.0   2.1      3.2  2.8         F\n",
        " 7     SMS  F or R    498  1.5   3.3      3.5  2.0         T\n",
        " 8     SRK  F or R    396  2.8   2.1      3.1  2.5         T\n",
        " 9      SK       F    160  1.7   1.9      1.6  3.7         F\n",
@@ -289,7 +289,7 @@
        " 16     SK       F    215  2.3   3.8      4.8  2.3         T)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "1.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,9 @@
       "['*' '*' (109, 389) (2.0, 2.0) (1.9, 2.2) (2.4, 3.3) (3.7, 4.3)]\n",
       "[(2, 'F'), (7, 'T')]\n",
       "['SRK' 'F or R' (325, 389) (2.0, 2.0) (2.1, 2.2) (3.2, 3.3) (2.8, 4.3)]\n",
-      "[(3, 'T'), (7, 'T')]\n",
+      "[(3, 'F'), (7, 'T')]\n",
+      "['*' 'F or R' (389, 498) (1.5, 2.0) (2.2, 3.3) (3.3, 3.5) (2.0, 4.3)]\n",
+      "[(4, 'T'), (7, 'T')]\n",
       "Accuracy for fold 1 is 0.67 \n",
       "\n",
       "Fold 2\n",
@@ -427,7 +429,7 @@
       "[(0, 'T')]\n",
       "['*' '*' (149, 396) (1.9, 2.8) (2.1, 2.5) (3.1, 4.0) (2.5, 3.8)]\n",
       "[(0, 'T'), (8, 'T')]\n",
-      "Accuracy for fold 3 is 1.00 \n",
+      "Accuracy for fold 3 is 0.67 \n",
       "\n",
       "Fold 4\n",
       "['SK' 'F' (149, 160) (1.7, 1.9) (1.9, 2.5) (1.6, 4.0) (3.7, 3.8)]\n",
@@ -454,7 +456,7 @@
       "[(0, 'T')]\n",
       "Accuracy for fold 6 is 1.00 \n",
       "\n",
-      "Cross validation accuracy 66.67%\n"
+      "Cross validation accuracy 61.11%\n"
      ]
     }
    ],
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -505,14 +507,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross validation accuracy 66.67%\n"
+      "Cross validation accuracy 61.11%\n"
      ]
     }
    ],
@@ -530,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -593,14 +595,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross validation accuracy 22.22%\n"
+      "Cross validation accuracy 16.67%\n"
      ]
     }
    ],
